# feed-rs

./: README.md
feed-rs/: Cargo.toml
feed-rs/src/: lib.rs  model.rs
feed-rs/src/parser/: mediarss.rs
feed-rs/src/parser/atom/: mod.rs
feed-rs/src/parser/json/: mod.rs
feed-rs/src/parser/rss2/: mod.rs
