[package]
name = "feed-rs"
version = "1.4.0"
edition = '2021'
authors = ["Hiroki Kumamoto <kumabook@live.jp>", "Mark Pritchard <mpritcha@gmail.com>"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "LICENSE-MIT",
    "README.md",
    "fixture/*"
]
license = "MIT"
description = "A unified feed parser that handles Atom, RSS 2.0, RSS 1.0, RSS 0.x and JSON Feed"
keywords = ["feed", "rss", "atom", "json", "jsonfeed"]
categories = ["parser-implementations"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"], default-features = false }
lazy_static = "1.4.0"
mime = {"0.3.17", features = ["serde"]}
quick-xml = { version = "0.31.0", features = ["encoding"] }
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
siphasher = "1.0.0"
url = "2.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
